created the modal for creating chatroom

--- a/Public/html/chatPage.html
+++ b/Public/html/chatPage.html
@@ -101,7 +101,8 @@
                     <!-- <input type="text" class="typeSpace" placeholder="type message"> -->
                     <textarea name="" cols="1" rows="1" class="typeSpace" id="msgText" placeholder="Type Message"
                         oninput="disableSend()"></textarea>
-                    <button type="submit" class="btn btn-success send" disabled> <i class="fas fa-paper-plane"></i>
+                    <button type="submit" class="btn btn-success send" style="height: 50px;" disabled> <i
+                            class="fas fa-paper-plane"></i>
                     </button>
                 </div>
             </div>
