--- a/Public/html/ChatRoom.html
+++ b/Public/html/ChatRoom.html
@@ -98,7 +98,7 @@
                 <button class="btn btn-success">Add friends to chats</button>
             </div>
             <div class="chat-well">
-                <ul class="list-group list-group-flush" id="chatList">
+                <ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
                     <li class="list-group-item">Morbi leo risus</li>
@@ -108,6 +108,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <p>&copy; Tokyo 2020</p>
 
