--- a/Public/html/ChatRoomList.html
+++ b/Public/html/ChatRoomList.html
@@ -100,16 +100,60 @@
             </div>
 
             <div class="friends-container">
-                <ul class="list-group list-group-flush" id="requestList">
-
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Morbi leo risus</li>
+                    <button class="btn btn-info">Create a new chatroom +</button>
                 </ul>
             </div>
-
-
         </section>
 
 
     </main>
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">New ChatRoom</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="userLogin">
+                        <div class="form-group">
+                            <label for="chatroomName">Chatroom Name</label>
+                            <input type="text" class="form-control" id="chatroomName" required
+                                placeholder="Enter Chatroom name">
+                        </div>
+                        <div class="form-group">
+                            <label for="purpose">Purpose</label>
+                            <input type="text" class="form-control" id="" purpose" required
+                                placeholder="Enter Chatroom name">
+                        </div>
+                        <div id="memList">
+
+                        </div>
+                        <div class="form-group">
+                            <label for="members">Select members</label>
+                            <select class="" id="members" name="members">
+                                <option selected value="">Select friends...</option>
+
+                            </select>
+
+                        </div>
+                        <button type="submit" class="btn btn-success btn-block">Create Chatroom</button>
+
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" id="closeModal">Cancel</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
         <p>&copy; Tokyo 2020</p>
 
@@ -132,9 +176,40 @@
     <script src="../Js/index.js"></script>
     <script>
         let userDetails = JSON.parse(localStorage.getItem("userData"));
-        $(document).ready(
+        $(document).ready(function () {
+                $(".empty").hide();
+            }
 
         )
+        var l = Array.from(document.getElementsByClassName('sFriends'));
+        for (let e of l) {
+            console.log($(`p.sFriends`).text())
+        }
+
+        $(".btn-info").click(e => {
+            e.preventDefault();
+            $('.modal').modal('show');
+        })
+        let p
+        $("#members").change(function (e) {
+            e.preventDefault();
+            $("#memList").append(
+                ` <p class="sFriends" value="${$(this).val()}">${$(this).val()} <span
+                        class="removeFriend">&times;</span></p>`)
+            console.log($(this).val());
+            $("#members option:selected").remove();
+            $('.removeFriend').click(function (e) {
+                e.preventDefault()
+                $(this).parent().remove()
+                $("#members").append(
+                    `<option>${$(this).parent().text().replace(/\u00D7/gi,'').trim()}</option>`)
+                console.log($(this).parent().text().replace('r', '').trim())
+            })
+        })
+        // $('.removeFriend').click(function (e) {
+        //     e.preventDefault()
+        //     $(this).parent().remove()
+        // })
     </script>
 </body>
 
