--- a/Public/html/FriendRequest.html
+++ b/Public/html/FriendRequest.html
@@ -64,8 +64,8 @@
 
                     </li>
                     <li>
-                        <a href="friends.html"></a><i class="fas fa-user-friends user"></i>
-                        <span>Friends</span> </a>
+                        <a href="friends.html"><i class="fas fa-user-friends user"></i>
+                            <span>Friends</span> </a>
 
                     </li>
                     <li>
