--- a/Public/html/addFriends.html
+++ b/Public/html/addFriends.html
@@ -24,28 +24,18 @@
             <div id="app-name">
                 <h3> Tokyo Chat App</h3>
             </div>
-
-            <div id="contactDetails">
-                <ul>
-                    <li class="cont"><a href="#"><i class="fab fa-facebook"></i> <span>Facebook</span></a></li>
-                    <li class="cont"><a href="#"><i class="fab fa-twitter"></i> <span>Twitter</span></a></li>
-                    <li class="cont"><a href="#"><i class="fab fa-github"></i> <span>GitHub</span></a></li>
-                </ul>
-            </div>
-
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#" id="link">Add Friends</a>
+            <a class="navbar-brand" id="link">Add Friends</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#" id="link">Home <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link " href="#" id="link">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="#" id="link">Features</a>
-                    <a class="nav-item nav-link" href="../index.html" id="link">Log Out</a>
+
                 </div>
             </div>
         </nav>
@@ -86,6 +76,11 @@
                     </li>
                     <li>
                         <a href="editProfile.html"><i class="fas fa-user-circle user"></i> <span>Edit Profile</span>
+                        </a>
+
+                    </li>
+                    <li>
+                        <a href="../index.html"><i class="fas fa-sign-out-alt user"></i> <span>Log Out</span>
                         </a>
 
                     </li>
@@ -154,7 +149,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/additional-methods.min.js"></script>
-    <script src="../Js/index.js"></script>
+
     <script>
         let userDetails = JSON.parse(localStorage.getItem("userData"));
         $(document).ready(
@@ -298,6 +293,21 @@
             e.preventDefault();
             $(".close").click()
         })
+        $("#menuIcon").click(function () {
+            $("#newSide").css("width", "250px");
+        });
+        $(".closeNav").click(function () {
+            $("#newSide").css("width", "0");
+        });
+
+        var modal = document.getElementById("newSide");
+        var btn = document.getElementById("menuIcon");
+
+        window.onclick = function (event) {
+            if (event.target !== modal && event.target !== btn) {
+                $("#newSide").css("width", "0");
+            }
+        };
     </script>
 </body>
 
