--- a/Public/html/ChatRoom.html
+++ b/Public/html/ChatRoom.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="../style/all.min.css">
 
-    <title>TCA | Friend Request</title>
+    <title>Tokyo | ChatApp</title>
 </head>
 
 <body>
@@ -24,91 +24,65 @@
             <div id="app-name">
                 <h3> Tokyo Chat App</h3>
             </div>
-
-            <!-- <div id="contactDetails">
-                <ul>
-                    <li class="cont"><a href="#"><i class="fab fa-facebook"></i> <span>Facebook</span></a></li>
-                    <li class="cont"><a href="#"><i class="fab fa-twitter"></i> <span>Twitter</span></a></li>
-                    <li class="cont"><a href="#"><i class="fab fa-github"></i> <span>GitHub</span></a></li>
-                </ul>
-            </div> -->
+            <!-- s -->
 
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#" id="link">Chat Room</a>
+            <a class="navbar-brand" id="link">Chat Page</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#" id="link">Home <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#" id="link">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="#" id="link">Features</a>
-                    <a class="nav-item nav-link" href="../index.html" id="link">Log Out</a>
                 </div>
             </div>
         </nav>
 
     </header>
     <main class="mainT">
-        <span id="menuIcon">&#9776; Menu</span>
+        <span id="menuIcon">&#9776; Members</span>
         <section id="newSide">
             <span class="closeNav">&times;</span>
             <div class="divMenu">
-                <h4>Menu</h4>
-                <ul>
-                    <li>
-                        <a href="userPage.html" class="active"><i class="far fa-comment-alt user"></i>
-                            <span>Chats</span> </a>
+                <h4>Members</h4>
+                <ul id="memList">
 
-                    </li>
-                    <li>
-                        <a href="friends.html" class="friend-link"><i class="fas fa-user-friends user"></i>
-                            <span>Friends</span> </a>
-
-                    </li>
-                    <li>
-                        <a href="ChatRoomList.html"><i class="fas fa-users user"></i> <span>Chat Rooms</span>
-                        </a>
-
-                    </li>
-                    <li>
-                        <a href="FriendRequest.html"><i class="fas fa-user-clock user"></i> <span>Friend
-                                Requests</span>
-                        </a>
-
-                    </li>
-                    <li>
-                        <a href="addFriends.html"><i class="fas fa-user-plus user"></i> <span>Add Friend</span> </a>
-
-                    </li>
-                    <li>
-                        <a href="editProfile.html"><i class="fas fa-user-circle user"></i> <span>Edit Profile</span>
-                        </a>
-
-                    </li>
                 </ul>
+
+            </div>
+            <div style="text-align: center;">
+                <button class="btn btn-info">Add members +</button>
             </div>
 
         </section>
-        <section class="card new">
-            <div class="empty">
-                <p>OOps!! you dont have any chats yet</p>
-                <button class="btn btn-success">Add friends to chats</button>
+        <section class="card new" style="padding: 0;">
+            <div class="well-">
+                <div id="wellHead">
+                    <span id="roomName">Cras
+                        justo</span> <a href="ChatRoomList.html" id="back"><i class="fas fa-arrow-left"></i></a>
+                </div>
+                <div id="wellBody">
+
+
+                </div>
+
+                <div id="wellFooter">
+
+                    <textarea name="" cols="1" rows="1" class="typeSpace" id="msgText" placeholder="Type Message"
+                        oninput="disableSend()"></textarea>
+                    <button type="submit" class="btn btn-success send" style="height: 50px;" disabled> <i
+                            class="fas fa-paper-plane"></i>
+                    </button>
+
+                </div>
             </div>
-            <div class="chat-well">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Morbi leo risus</li>
-                    <li class="list-group-item">Porta ac consectetur ac</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                </ul>
-            </div>
+
         </section>
+
     </main>
-
     <footer>
         <p>&copy; Tokyo 2020</p>
 
@@ -119,23 +93,233 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </footer>
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Friends</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <ul class="list-group list-group-flush" id="newMembers">
 
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/additional-methods.min.js"></script>
-    <script src="../Js/userIndex.js"></script>
+    <script src="../Js/index.js"></script>
     <script>
-        // let userDetails = JSON.parse(localStorage.getItem("userData"));
-        let userDetails = JSON.parse(localStorage.getItem("userData"));
-        $(document).ready(
+        let roomDetails = JSON.parse(document.cookie);
+        $(document).ready(function () {
+            popRoomMsg();
+            popMemList();
+            checkAdmin()
+        })
 
-        )
+        $(".btn-info").click(e => {
+            e.preventDefault();
+            document.getElementById('newMembers').innerHTML = ''
+            poplist();
+            filter();
+            $('.modal').modal('show');
+            $(".list-group-item").click(e => {
+                if ($(e.target).hasClass('selected')) {
+                    $(e.target).removeClass('selected');
+                } else {
+                    $(e.target).addClass('selected');
+                }
+
+            })
+        })
+
+
+        function filter() {
+            friends.forEach(friend => {
+                $.ajax({
+                        method: 'GET',
+                        url: `http://localhost:3000/chatroomMembers?roomId=${roomDetails.roomId}&memId=${friend.friendId}`
+                    })
+                    .done(function (res) {
+                        if (res.length) {
+                            $(`#${friend.friendId}`).remove()
+                        }
+
+                    })
+            })
+        }
+
+
+
+        function checkAdmin() {
+            $.ajax({
+                    method: 'GET',
+                    url: `http://localhost:3000/chatroom/${roomDetails.roomId}`
+                })
+                .done(function (res) {
+                    if (res.adminId != userDetails.id) {
+                        $(".btn-info").remove();
+                    }
+                })
+        }
+
+
+
+        function popMemList() {
+            $.ajax({
+                    method: "GET",
+                    url: `http://localhost:3000/chatroomMembers?roomId=${roomDetails.roomId}`
+                })
+                .done(function (result) {
+                    result.forEach(mem => {
+                        $("#memList").prepend(`
+                        <li><a href=""><img src="../img/login_icon.png" alt="..." class="profile-img">
+                                <span> ${mem.memName}</span></a>
+                        </li>
+`)
+                    })
+                })
+        }
+
+        function popRoomMsg() {
+            $.ajax({
+                    method: "GET",
+                    url: `http://localhost:3000/roomMessages?roomId=${roomDetails.roomId}`
+                })
+                .done(function (res) {
+                    if (res.length) {
+                        res.forEach(element => {
+                            if (element.senderId == userDetails.id) {
+                                $("#wellBody").append(`<p class="msgOut">${element.messageSent}<span
+                                        class="timeStamp">${element.timeSent}</span></p>`)
+                            } else {
+                                $("#wellBody").append(`<p class="msgIn"><span
+                                         class="senderName"><em>${element.senderName}</em></span>${element.messageSent}<span
+                                         class="timeStamp">${element.timeSent}</span></p>`)
+                            }
+                        });
+                    }
+                })
+        }
+
+        $("#roomName").text(`${roomDetails.roomPurpose}`);
+        $("#link").text(`${roomDetails.roomName}`);
+
+        let timeSent = getTime()
+
+        function poplist() {
+            friends.forEach(friend => {
+                $("#newMembers").append(
+                    ` <li class="list-group-item" id="${friend.friendId}">${friend.friendName}</li>`
+                )
+
+            })
+
+        }
+
+
+
+        $(".btn-primary").click(e => {
+            e.preventDefault();
+            let memData;
+            let sFriends = Array.from($(".selected"))
+            sFriends.forEach(d => {
+                memData = {
+                    roomId: roomDetails.roomId,
+                    roomName: roomDetails.roomName,
+                    roomPurpose: roomDetails.roomPurpose,
+                    memName: d.textContent,
+                    memId: d.id,
+                    adminId: userDetails.id
+                }
+                $.ajax({
+                    method: 'POST',
+                    url: 'http://localhost:3000/chatroomMembers',
+                    data: memData
+                })
+
+                console.log(d.id)
+            })
+
+        })
+
+
+        function disableSend() {
+            let text;
+            text = $(".typeSpace").val()
+            if (text === '' || /^\s+$/.test(text)) {
+                $(".send").attr('disabled', true)
+            } else {
+                $(".send").attr('disabled', false)
+            }
+        }
+
+        $(".send").click(e => {
+            let msgData;
+            e.preventDefault();
+            let timeSent = getTime();
+            let messageSent = $(".typeSpace").val().trim();
+            msgData = {
+                senderId: userDetails.id,
+                senderName: userDetails.firstname + " " + userDetails.lastname,
+                roomId: roomDetails.roomId,
+                messageSent,
+                timeSent
+            }
+
+            $.ajax({
+                method: 'POST',
+                url: 'http://localhost:3000/roomMessages',
+                data: msgData
+            })
+            popRoomMsg();
+            clear();
+        })
+
+
+        function clear() {
+            $(".typeSpace").val('')
+        }
+
+        function getTime() {
+            let tRes, hour, min, d, res;
+            d = new Date()
+            hour = d.getHours()
+            min = d.getMinutes()
+            if (min < 10) {
+                min = '0' + min
+            }
+            if (hour == 0) {
+                hour += 12
+                res = hour + ":" + min + " AM"
+                return res
+            }
+            if (hour < 12) {
+                res = hour + ":" + min + " AM"
+            } else if (hour === 12) {
+                res = hour + ":" + min + " PM"
+            } else {
+                tRes = Math.abs(hour - 12)
+                if (tRes === 12) {
+                    res = tRes + ":" + min + " AM"
+                }
+                res = tRes + ":" + min + " PM"
+            }
+
+            return res;
+        }
     </script>
 </body>
 
