--- a/Public/html/friends.html
+++ b/Public/html/friends.html
@@ -27,17 +27,15 @@
 
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#" id="link">Friends</a>
+            <a class="navbar-brand" id="link">Friends</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#" id="link">Home <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#" id="link">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="#" id="link">Features</a>
-                    <a class="nav-item nav-link" href="../index.html" id="link">Log Out</a>
                 </div>
             </div>
         </nav>
@@ -78,6 +76,11 @@
                     </li>
                     <li>
                         <a href="editProfile.html"><i class="fas fa-user-circle user"></i> <span>Edit Profile</span>
+                        </a>
+
+                    </li>
+                    <li>
+                        <a href="../index.html"><i class="fas fa-sign-out-alt user"></i> <span>Log Out</span>
                         </a>
 
                     </li>
@@ -154,25 +157,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/additional-methods.min.js"></script>
     <script src="../Js/index.js"></script>
     <script>
-        let userDetails = JSON.parse(localStorage.getItem("userData"));
-        let friends;
-
-
-
-
-        // setTimeout(function () {
-        //     friends = Array.from(document.getElementsByClassName('list-group-item'));
-        //     let friendArry = [];
-        //     for (let friend of friends) {
-        //         friendArry.push({
-        //             name: friend.innerText,
-        //             id: friend.id
-        //         });
-        //         document.cookie = JSON.stringify(friendArry);
-        //         console.log(friendArry);
-        //     }
-        // }, 3000);
-
         $(".close").click((e) => {
             e.preventDefault();
             $(".modal").hide()
